# uber-earnings-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
data/sample/: sample_earnings.csv
src/uber_earnings_analyzer/: __init__.py  analyzer.py  data_loader.py  server.py
tests/: test_analyzer.py  test_data_loader.py  test_server.py
