[project]
name = "uber-earnings-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp<2",
    "pandas>=3.0.3",
]

[project.scripts]
uber-earnings-analyzer = "uber_earnings_analyzer:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
